# convNet

./: CMakeLists.txt  README.md  coreFunc.cpp  coreFunc.h  npLoad.cpp  parameters.h  readme.txt  utilities.cpp  utilities.h
